removes code smells